--- a/src/main/resources/assets/kinswathe/lang/en_us.json
+++ b/src/main/resources/assets/kinswathe/lang/en_us.json
@@ -7,8 +7,8 @@
   "announcement.goals.kinswathe.bellringer": "Check time, and modify time.",
   "tip.kinswathe.bellringer.not_enough_money": "100§f\uE781§r required to activate ability",
 
-  "announcement.role.kinswathe.robot": "Robot",
-  "announcement.goals.kinswathe.robot": "A machine devoid of any emotion.",
+  "announcement.role.kinswathe.cook": "Cook",
+  "announcement.goals.kinswathe.cook": "See players that eat through walls!",
 
   "announcement.role.kinswathe.detective": "Detective",
   "announcement.goals.kinswathe.detective": "Investigate everything!",
@@ -16,6 +16,9 @@
   "tip.kinswathe.detective.innocent": "%s is innocent",
   "tip.kinswathe.detective.notinnocent": "%s is not innocent",
   "hud.kinswathe.detective.target": "Use %s to investigate",
+
+  "announcement.role.kinswathe.robot": "Robot",
+  "announcement.goals.kinswathe.robot": "A machine devoid of any emotion.",
 
   "announcement.role.kinswathe.cleaner": "Cleaner",
   "announcement.goals.kinswathe.cleaner": "Remove all obstacles!",
@@ -29,5 +32,7 @@
   "announcement.modifier.kinswathe.taskmaster": "Taskmaster",
 
   "item.kinswathe.sulfuric_acid_barrel": "Sulfuric Acid Barrel",
-  "item.kinswathe.sulfuric_acid_barrel.tooltip": "Use on a dead body to dissolve it\n1 minute cooldown"
+  "item.kinswathe.sulfuric_acid_barrel.tooltip": "Use on a dead body to dissolve it\n1 minute cooldown",
+
+  "shop.purchase_failed": "Purchase Failed"
 }
