--- a/src/main/resources/assets/kinswathe/lang/zh_cn.json
+++ b/src/main/resources/assets/kinswathe/lang/zh_cn.json
@@ -7,8 +7,8 @@
   "announcement.goals.kinswathe.bellringer": "查看时间，并修改时间。",
   "tip.kinswathe.bellringer.not_enough_money": "需要 200§f\uE781§r 发动能力",
 
-  "announcement.role.kinswathe.robot": "机器人",
-  "announcement.goals.kinswathe.robot": "毫无感情可言的机器。",
+  "announcement.role.kinswathe.cook": "厨师",
+  "announcement.goals.kinswathe.cook": "透过墙壁看见吃过东西的玩家！",
 
   "announcement.role.kinswathe.detective": "侦探",
   "announcement.goals.kinswathe.detective": "调查出一切！",
@@ -16,6 +16,9 @@
   "tip.kinswathe.detective.innocent": "%s 是平民",
   "tip.kinswathe.detective.notinnocent": "%s 不是平民",
   "hud.kinswathe.detective.target": "按下 %s 键调查该目标身份",
+
+  "announcement.role.kinswathe.robot": "机器人",
+  "announcement.goals.kinswathe.robot": "毫无感情可言的机器。",
 
   "announcement.role.kinswathe.cleaner": "清道夫",
   "announcement.goals.kinswathe.cleaner": "扫除一切障碍！",
@@ -29,5 +32,7 @@
   "announcement.modifier.kinswathe.taskmaster": "任务大师",
 
   "item.kinswathe.sulfuric_acid_barrel": "硫酸桶",
-  "item.kinswathe.sulfuric_acid_barrel.tooltip": "用于尸体，可将其溶解移除\n冷却 1 分钟"
+  "item.kinswathe.sulfuric_acid_barrel.tooltip": "用于尸体，可将其溶解移除\n冷却 1 分钟",
+
+  "shop.purchase_failed": "购买失败"
 }
