--- a/src/main/resources/assets/kinswathe/lang/zh_cn.json
+++ b/src/main/resources/assets/kinswathe/lang/zh_cn.json
@@ -24,6 +24,9 @@
   "announcement.goals.kinswathe.cleaner": "扫除一切障碍！",
   "tip.kinswathe.cleaner.not_enough_money": "需要 200§f\uE781§r 发动能力",
 
+  "announcement.role.kinswathe.drugmaker": "制毒师",
+  "announcement.goals.kinswathe.drugmaker": "用毒药征服所有人！",
+
   "announcement.role.kinswathe.licensed_villain": "执照恶棍",
   "announcement.goals.kinswathe.licensed_villain": "你或许还尚存有一丝良知...",
   "announcement.win.kinswathe.licensed_villain": "执照恶棍胜利！",
