--- a/src/main/resources/assets/kinswathe/lang/en_us.json
+++ b/src/main/resources/assets/kinswathe/lang/en_us.json
@@ -5,20 +5,20 @@
 
   "announcement.role.kinswathe.bellringer": "Bellringer",
   "announcement.goals.kinswathe.bellringer": "Check time, and modify time.",
-  "tip.kinswathe.bellringer.not_enough_money": "100§f\uE781§r required to activate ability",
+  "tip.kinswathe.bellringer.not_enough_money": "%s§f\uE781§r required to activate ability",
 
   "announcement.role.kinswathe.cook": "Cook",
   "announcement.goals.kinswathe.cook": "See players that eat through walls!",
 
   "announcement.role.kinswathe.detective": "Detective",
   "announcement.goals.kinswathe.detective": "Investigate everything!",
-  "tip.kinswathe.detective.not_enough_money": "200§f\uE781§r required to activate ability",
+  "tip.kinswathe.detective.not_enough_money": "%s§f\uE781§r required to activate ability",
   "tip.kinswathe.detective.innocent": "%s is innocent",
   "tip.kinswathe.detective.notinnocent": "%s is not innocent",
   "hud.kinswathe.detective.target": "Use %s to investigate",
 
   "announcement.role.kinswathe.physician": "Physician",
-  "announcement.goals.kinswathe.physician": "Treat every patient.",
+  "announcement.goals.kinswathe.physician": "See poisoned players through walls and treat them.",
   "tip.kinswathe.physician.medical_kit": "You feel much better now.",
 
   "announcement.role.kinswathe.robot": "Robot",
@@ -26,7 +26,7 @@
 
   "announcement.role.kinswathe.cleaner": "Cleaner",
   "announcement.goals.kinswathe.cleaner": "Remove all obstacles!",
-  "tip.kinswathe.cleaner.not_enough_money": "200§f\uE781§r required to activate ability",
+  "tip.kinswathe.cleaner.not_enough_money": "%s§f\uE781§r required to activate ability",
 
   "announcement.role.kinswathe.drugmaker": "Drugmaker",
   "announcement.goals.kinswathe.drugmaker": "Conquer everyone with poison!",
